Week 3 Log-Book Joshy

--- a/work_diaries/z5165717.md
+++ b/work_diaries/z5165717.md
@@ -16,4 +16,4 @@ For the meeting next week we are all researching architectures we think are appr
 
 This week was focused on writing the project proposal, as well as finalising story point estimates and the sprint backlog. In our weekly meeting we played Planning Poker, assigning each user story a story point estimate. Once we had done this we could divide the total number of story points by the 3 sprints we had planned, and use this to determine the story point budget for each sprint. We also assigned each user story a priority, and assigned stories to sprints in priority order.
 
-As scrum master I updated all of these things in the Jira, and completed the proposal section on user stories and sprints. Next week we will finish the report, and begin our first sprint.  
+As the scrum master I updated all of these things in the Jira, and completed the proposal section on user stories and sprints. Next week we will finish the report, and begin our first sprint.  
