Week 4 Diary - Josh R-G

--- a/work_diaries/z5161697.md
+++ b/work_diaries/z5161697.md
@@ -45,3 +45,13 @@
  - As a group we decided on the novel features of our system and added them to the user-stories.
  - During the meeting I aided with the formatting of the various sections of the Proposal.
  - I was assigned to help set up the REACT environment as I have an interest in UX.
+
+## Week 4
+
+ ### Meeting 5
+ - We met as a group and made sure that everyone had the correct dependancies installed and running
+ - This took a while, but over the course of several hours we had the React app talking to the flask-Postgresql backend, and the python setup scripts working perfectly for everyone.
+ - We then allocated out the different user stories for the first sprint due next week.
+
+ ### Personal Work
+ - Taking a crash course in the React framework to upskill for the project.
