--- a/work_diaries/z5165717.md
+++ b/work_diaries/z5165717.md
@@ -1,19 +1,19 @@
 # Work Diary
 
-
-
 ## Week 1 (01/06/20 - 07/06/20)
 
-This week we formed our group and decided on our project (ReadRecommend). As I had used Jira before, I was chosen to be the Scrum Master for the group. I created the Jira project and GitHub repo for the project, and allocated the appropriate permissions to the other group members. We also had a meeting where we generated Epics and User Stories from the project description. I then added these stories to the Jira project. 
-
-
+This week we formed our group and decided on our project (ReadRecommend). As I had used Jira before, I was chosen to be the Scrum Master for the group. I created the Jira project and GitHub repo for the project, and allocated the appropriate permissions to the other group members. We also had a meeting where we generated Epics and User Stories from the project description. I then added these stories to the Jira project.
 
 For the meeting next week we are all researching architectures we think are appropriate for the project. We aim to decide on an architecture next week. Additionally, during next week's meeting we are aiming to allocate story points and priorities to each user story with Planning Poker.
-
-
 
 ## Week 2 (08/06/20 - 14/06/20)
 
 This week was focused on writing the project proposal, as well as finalising story point estimates and the sprint backlog. In our weekly meeting we played Planning Poker, assigning each user story a story point estimate. Once we had done this we could divide the total number of story points by the 3 sprints we had planned, and use this to determine the story point budget for each sprint. We also assigned each user story a priority, and assigned stories to sprints in priority order.
 
-As the scrum master I updated all of these things in the Jira, and completed the proposal section on user stories and sprints. Next week we will finish the report, and begin our first sprint.  
+As the scrum master I updated all of these things in the Jira, and completed the proposal section on user stories and sprints. Next week we will finish the report, and begin our first sprint.
+
+## Week 3 (15/06/20 - 21/06/20)
+
+The majority focus this week was on completing the report, as well as getting all the frameworks set up for the first sprint. I completed the user stories + sprints section of the report, and worked with the team to finalise all the diagrams and storyboards.
+
+Before we could begin implementing user stories in Sprint 1, we had to set up some architectural things. As other members of the team set up the Postgres database and React app, I focused on building the Model in the SQLAlchemy (our ORM) so they could be easily returned as resources in API calls. I also wrote a simple web scraper to scrape book data off GoodReads so we had dummy data to play around with.
