Week 4 work diary

--- a/work_diaries/z5165717.md
+++ b/work_diaries/z5165717.md
@@ -17,3 +17,9 @@ As the scrum master I updated all of these things in the Jira, and completed the
 The majority focus this week was on completing the report, as well as getting all the frameworks set up for the first sprint. I completed the user stories + sprints section of the report, and worked with the team to finalise all the diagrams and storyboards.
 
 Before we could begin implementing user stories in Sprint 1, we had to set up some architectural things. As other members of the team set up the Postgres database and React app, I focused on building the Model in the SQLAlchemy (our ORM) so they could be easily returned as resources in API calls. I also wrote a simple web scraper to scrape book data off GoodReads so we had dummy data to play around with.
+
+## Week 4 (15/06/20 - 21/06/20)
+
+This week was focused on completing the user stories allocated to the first sprint. I implemented the basic some basic API routes such as retrieving a list of books, the info of a single book etc. I also configured the API to use Marshmallow for marshalling and serialisation of the responses.
+
+My user stories were to implement following between users, and setup main collections of books. I completed the following API route and wrote unit tests for this feature. I also assisted Joshy Rohan-Gould in the creation of the collections api endpoint.
