Week 5 work diary

--- a/work_diaries/z5165717.md
+++ b/work_diaries/z5165717.md
@@ -18,8 +18,16 @@ The majority focus this week was on completing the report, as well as getting al
 
 Before we could begin implementing user stories in Sprint 1, we had to set up some architectural things. As other members of the team set up the Postgres database and React app, I focused on building the Model in the SQLAlchemy (our ORM) so they could be easily returned as resources in API calls. I also wrote a simple web scraper to scrape book data off GoodReads so we had dummy data to play around with.
 
-## Week 4 (15/06/20 - 21/06/20)
+## Week 4 (22/06/20 - 28/06/20)
 
 This week was focused on completing the user stories allocated to the first sprint. I implemented the basic some basic API routes such as retrieving a list of books, the info of a single book etc. I also configured the API to use Marshmallow for marshalling and serialisation of the responses.
 
 My user stories were to implement following between users, and setup main collections of books. I completed the following API route and wrote unit tests for this feature. I also assisted Joshy Rohan-Gould in the creation of the collections api endpoint.
+
+## Week 5 (29/06/20 - 05/07/20)
+
+The first part of this week was focused on finishing the first sprint. Despite some things being done at the last minute we got everything finished in time. At the weekly meeting after the demo, I ran our first retrospective session. I talked to everyone about what they thought worked and what they thought didn't and then assigned a person to be in charge of the things to try for this sprint.
+
+Additionally, I also allocated the user stories to the developers for Sprint 2. This involved seeing who had the interest and skills for each story, as well as how to distribute them to avoid conflicting efforts.
+
+The rest of the week was spent beginning work on my user stories, which mostly involved building the BookPage
