Add Week 6 work diary

--- a/work_diaries/z5165717.md
+++ b/work_diaries/z5165717.md
@@ -31,3 +31,10 @@ The first part of this week was focused on finishing the first sprint. Despite s
 Additionally, I also allocated the user stories to the developers for Sprint 2. This involved seeing who had the interest and skills for each story, as well as how to distribute them to avoid conflicting efforts.
 
 The rest of the week was spent beginning work on my user stories, which mostly involved building the BookPage
+
+## Week 6 (06/07/20 - 12/07/20)
+This week was evenly split between working on my 3 assigned areas of work. Firstly was completing the book page, and working with William Liu to integrate reviews into the page. 
+
+Secondly, I adjusted the way the backend processes collections in order to make iot possible to retrieve all a user's books, or their 10 most recently read. 
+
+Finally, I also gave the frontend a big facelift, making sure every component followed the Bootstrap design style we were using. This involved some refactoring and working with the whole team to improve the look and layout of the site.
