Week 7 work diary

--- a/work_diaries/z5165717.md
+++ b/work_diaries/z5165717.md
@@ -30,7 +30,7 @@ The first part of this week was focused on finishing the first sprint. Despite s
 
 Additionally, I also allocated the user stories to the developers for Sprint 2. This involved seeing who had the interest and skills for each story, as well as how to distribute them to avoid conflicting efforts.
 
-The rest of the week was spent beginning work on my user stories, which mostly involved building the BookPage
+The rest of the week was spent beginning work on my user stories, which mostly involved building the BookPage, as well as improving the UI of the rest of the website.
 
 ## Week 6 (06/07/20 - 12/07/20)
 This week was evenly split between working on my 3 assigned areas of work. Firstly was completing the book page, and working with William Liu to integrate reviews into the page. 
@@ -38,3 +38,8 @@ This week was evenly split between working on my 3 assigned areas of work. First
 Secondly, I adjusted the way the backend processes collections in order to make iot possible to retrieve all a user's books, or their 10 most recently read. 
 
 Finally, I also gave the frontend a big facelift, making sure every component followed the Bootstrap design style we were using. This involved some refactoring and working with the whole team to improve the look and layout of the site.
+
+## Week 7 (13/07/20 - 19/07/20)
+Once again this week started off by finishing the user stories for Sprint 2. For the second time I lead the team through a retrospective after the end of the second sprint. I assigned people to each "to try" and we evaluated the things from last retro. 
+
+The second half of the week was focused on fixing a few bugs from Sprint 2, and finishing off one section of the work assigned to me for Sprint 3. I finished off the "Blind Cover" for our unseen recommendations, and also reimplemented how the All and Recently Read views of a user's collections were generated.
