Week 8 work diary

--- a/work_diaries/z5165717.md
+++ b/work_diaries/z5165717.md
@@ -43,3 +43,8 @@ Finally, I also gave the frontend a big facelift, making sure every component fo
 Once again this week started off by finishing the user stories for Sprint 2. For the second time I lead the team through a retrospective after the end of the second sprint. I assigned people to each "to try" and we evaluated the things from last retro. 
 
 The second half of the week was focused on fixing a few bugs from Sprint 2, and finishing off one section of the work assigned to me for Sprint 3. I finished off the "Blind Cover" for our unseen recommendations, and also reimplemented how the All and Recently Read views of a user's collections were generated.
+
+## Week 8 (20/07/20 - 26/07/20)
+This week was entirely dedicated to building the content based recommendation system. Firstly I did a lot of research on existing solutions and best-practices, and then ran some trial experiments with various implementations.
+
+Eventually I settled on  a TFIDF Vectorizer, and cosine similarity as the representation and metric to use. Once research and design was done, I implemented the code into the backend and connected it to the views in the frontend so recommendations could be generated based on seed books.
