--- a/work_diaries/z5165717.md
+++ b/work_diaries/z5165717.md
@@ -48,3 +48,8 @@ The second half of the week was focused on fixing a few bugs from Sprint 2, and 
 This week was entirely dedicated to building the content based recommendation system. Firstly I did a lot of research on existing solutions and best-practices, and then ran some trial experiments with various implementations.
 
 Eventually I settled on  a TFIDF Vectorizer, and cosine similarity as the representation and metric to use. Once research and design was done, I implemented the code into the backend and connected it to the views in the frontend so recommendations could be generated based on seed books.
+
+## Week 9 (27/07/20 - 02/08/20)
+After the end of Sprint 3, I led the group the the construction of a master backlog of outstanding bugs, feature ideas, enhancements and improvements that could be made. Once this list was generated I spent the week refactoring the backend code, and fixing various usability and UI bugs in the frontend. 
+
+Additionally I wrote the report section on Implementation challenges.
